// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayHorizontalCard should render a ClayHorizontalCard with a different icon 1`] = `
<div class="card-type-directory card card-horizontal">
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col">
        <span class="sticker sticker-rounded sticker-unstyled">
          <span class="inline-item">
            <svg class="lexicon-icon lexicon-icon-list" focusable="false" role="presentation">
              <use xlink:href="icons.svg#list"></use>
            </svg>
          </span>
        </span>
      </div>
      <div class="autofit-col autofit-col-expand autofit-col-gutters">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with actionItems 1`] = `
<div class="card-type-directory card card-horizontal">
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col">
        <span class="sticker sticker-rounded sticker-unstyled">
          <span class="inline-item">
            <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
              <use xlink:href="icons.svg#folder"></use>
            </svg>
          </span>
        </span>
      </div>
      <div class="autofit-col autofit-col-expand autofit-col-gutters">
        <div class="card-title text-truncate">My Title</div>
      </div>
      <div class="autofit-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="My Title actions" type="button">
            <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Edit</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Save</a>
    </li>
  </ul>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with actionItems and actionAriaLabel 1`] = `
<div class="card-type-directory card card-horizontal">
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col">
        <span class="sticker sticker-rounded sticker-unstyled">
          <span class="inline-item">
            <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
              <use xlink:href="icons.svg#folder"></use>
            </svg>
          </span>
        </span>
      </div>
      <div class="autofit-col autofit-col-expand autofit-col-gutters">
        <div class="card-title text-truncate">My Title</div>
      </div>
      <div class="autofit-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle actions" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="My Title actions" type="button">
            <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Edit</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Save</a>
    </li>
  </ul>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with classes 1`] = `
<div class="card-type-directory card card-horizontal my-custom-class">
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col">
        <span class="sticker sticker-rounded sticker-unstyled">
          <span class="inline-item">
            <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
              <use xlink:href="icons.svg#folder"></use>
            </svg>
          </span>
        </span>
      </div>
      <div class="autofit-col autofit-col-expand autofit-col-gutters">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with href 1`] = `
<div class="card-type-directory card card-horizontal">
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col">
        <span class="sticker sticker-rounded sticker-unstyled">
          <span class="inline-item">
            <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
              <use xlink:href="icons.svg#folder"></use>
            </svg>
          </span>
        </span>
      </div>
      <div class="autofit-col autofit-col-expand autofit-col-gutters">
        <a class=" card-title text-truncate" href="#1">My Title</a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a ClayHorizontalCard with id 1`] = `
<div class="card-type-directory card card-horizontal" id="myId">
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col">
        <span class="sticker sticker-rounded sticker-unstyled">
          <span class="inline-item">
            <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
              <use xlink:href="icons.svg#folder"></use>
            </svg>
          </span>
        </span>
      </div>
      <div class="autofit-col autofit-col-expand autofit-col-gutters">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a disabled ClayHorizontalCard 1`] = `
<div class="card-type-directory form-check form-check-card form-check-middle-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
      <span class="custom-control-label"></span>
      <div class="card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <div class="autofit-col">
              <span class="sticker sticker-rounded sticker-unstyled">
                <span class="inline-item">
                  <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
                    <use xlink:href="icons.svg#folder"></use>
                  </svg>
                </span>
              </span>
            </div>
            <div class="autofit-col autofit-col-expand autofit-col-gutters">
              <div class="card-title text-truncate">My Title</div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a selectable ClayHorizontalCard 1`] = `
<div class="card-type-directory form-check form-check-card form-check-middle-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input class="custom-control-input" ref="input" type="checkbox">
      <span class="custom-control-label"></span>
      <div class="card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <div class="autofit-col">
              <span class="sticker sticker-rounded sticker-unstyled">
                <span class="inline-item">
                  <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
                    <use xlink:href="icons.svg#folder"></use>
                  </svg>
                </span>
              </span>
            </div>
            <div class="autofit-col autofit-col-expand autofit-col-gutters">
              <div class="card-title text-truncate">My Title</div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a selectable ClayHorizontalCard with input \`name\` 1`] = `
<div class="card-type-directory form-check form-check-card form-check-middle-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input class="custom-control-input" name="checkbox01" ref="input" type="checkbox">
      <span class="custom-control-label"></span>
      <div class="card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <div class="autofit-col">
              <span class="sticker sticker-rounded sticker-unstyled">
                <span class="inline-item">
                  <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
                    <use xlink:href="icons.svg#folder"></use>
                  </svg>
                </span>
              </span>
            </div>
            <div class="autofit-col autofit-col-expand autofit-col-gutters">
              <div class="card-title text-truncate">My Title</div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a selectable ClayHorizontalCard with input \`value\` 1`] = `
<div class="card-type-directory form-check form-check-card form-check-middle-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input class="custom-control-input" value="checkbox" ref="input" type="checkbox">
      <span class="custom-control-label"></span>
      <div class="card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <div class="autofit-col">
              <span class="sticker sticker-rounded sticker-unstyled">
                <span class="inline-item">
                  <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
                    <use xlink:href="icons.svg#folder"></use>
                  </svg>
                </span>
              </span>
            </div>
            <div class="autofit-col autofit-col-expand autofit-col-gutters">
              <div class="card-title text-truncate">My Title</div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render a selected ClayHorizontalCard 1`] = `
<div class="card-type-directory form-check form-check-card form-check-middle-left">
  <div class="custom-control custom-checkbox">
    <label>
      <input checked="" class="custom-control-input" ref="input" type="checkbox">
      <span class="custom-control-label"></span>
      <div class="card card-horizontal">
        <div class="card-body">
          <div class="card-row">
            <div class="autofit-col">
              <span class="sticker sticker-rounded sticker-unstyled">
                <span class="inline-item">
                  <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
                    <use xlink:href="icons.svg#folder"></use>
                  </svg>
                </span>
              </span>
            </div>
            <div class="autofit-col autofit-col-expand autofit-col-gutters">
              <div class="card-title text-truncate">My Title</div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`ClayHorizontalCard should render the default markup 1`] = `
<div class="card-type-directory card card-horizontal">
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col">
        <span class="sticker sticker-rounded sticker-unstyled">
          <span class="inline-item">
            <svg class="lexicon-icon lexicon-icon-folder" focusable="false" role="presentation">
              <use xlink:href="icons.svg#folder"></use>
            </svg>
          </span>
        </span>
      </div>
      <div class="autofit-col autofit-col-expand autofit-col-gutters">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;
